--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
             <div class="Projects_Container">
                 <div class="Projects">
-                    <p id="User_Projects">Your Projects</p>
+                    <p id="User_Projects" class="LeftProjects">Your Projects</p>
                     <div class="Grid_Container">
                         <div class="Grid"></div>
                         <div class="Grid"></div>
@@ -96,10 +96,10 @@
                 <div class="Info_Container">
                     <div class="Announcements">
                         <p id="User_Projects">Announcement</p>
-                        <ul class="Announcement_Container">
-                            <li><div>
-                                <p id="Info">Site Maintenance</p>
-                                <p id="Info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec porttitor,
+                        <ul id="Side_Container" class="Announcement_Container">
+                            <li id="ListItem"><div class="Item">
+                                <p id="InfoItem">Site Maintenance</p>
+                                <p id="InfoItem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec porttitor,
                                      sapien in hendrerit viverra, nibh tellus interdum sem, nec tincidunt diam dolor id sem.
                                       Vestibulum semper tincidunt justo id euismod. Quisque quis ante dictum, cursus turpis quis, ultricies nulla.
                                        Aliquam aliquam luctus ante euismod consectetur. Vestibulum nec pharetra ex. Pellentesque quis luctus augue.
@@ -111,7 +111,7 @@
 
                     <div class="Trending">
                         <p id="User_Projects">Trending</p>
-                        <ul class="Trending_Container"></ul>
+                        <ul id="Side_Container"  class="Trending_Container"></ul>
                     </div>
                 </div>
             </div>
